--- a/MVHomepage.html
+++ b/MVHomepage.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" href="/Users/davidalpert/Desktop/MV Project/MVstyling.css">
+<link rel="stylesheet" href="https://daa99.github.io/MVstyling.css">
 
 </head>
 
