--- a/MVHomepage.html
+++ b/MVHomepage.html
@@ -13,7 +13,7 @@
   <a href="/Users/davidalpert/Desktop/MV Project/resturants.html">Restaurants</a>
   <a href="/Users/davidalpert/Desktop/MV Project/Transport.html">Transportation</a>
   <a href="/Users/davidalpert/Desktop/MV Project/Landmarks.html">Landmarks</a>
-  <a href="/Users/davidalpert/Desktop/MV Project/About.html">About</a>
+  <a href="https://daa99.github.io/About.html">About</a>
 </div>
 <br>
 <center>
