--- a/MVHomepage.html
+++ b/MVHomepage.html
@@ -21,7 +21,7 @@
 
 <div class="mySlides fade">
 
-  <img src="/Users/davidalpert/Desktop/MV Project/Homepg5.jpg" Width="500px" Height="500px">
+  <img src="https://daa99.github.io/Homepg5.jpg" Width="500px" Height="500px">
   <div class="text">Edgartown Light House</div>
 </div>
 
