--- a/Transport.html
+++ b/Transport.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" href="/Users/davidalpert/Desktop/MV Project/MVstyling.css">
+<link rel="stylesheet" href="https://daa99.github.io/MVstyling.css">
 </head>
 <body>
   <H1> Martha's Vineyard </H1>
