--- a/MVHomepage.html
+++ b/MVHomepage.html
@@ -12,7 +12,7 @@
   <a href="/Users/davidalpert/Desktop/MV Project/beaches.html">Beaches</a>
   <a href="/Users/davidalpert/Desktop/MV Project/resturants.html">Restaurants</a>
   <a href="/Users/davidalpert/Desktop/MV Project/Transport.html">Transportation</a>
-  <a href="/Users/davidalpert/Desktop/MV Project/Landmarks.html">Landmarks</a>
+  <a href="https://daa99.github.io/Landmarks.html">Landmarks</a>
   <a href="https://daa99.github.io/About.html">About</a>
 </div>
 <br>
