--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@ form {border-style: double;
     <a href="/Users/davidalpert/Desktop/MV Project/beaches.html">Beaches</a>
     <a href="/Users/davidalpert/Desktop/MV Project/resturants.html">Restaurants</a>
     <a href="/Users/davidalpert/Desktop/MV Project/Transport.html">Transportation</a>
-    <a href="/Users/davidalpert/Desktop/MV Project/Landmarks.html">Landmarks</a>
+    <a href="https://daa99.github.io/Landmarks.html">Landmarks</a>
     <a class="active" href="#about">About</a>
   </div>
 
