--- a/beaches.html
+++ b/beaches.html
@@ -10,7 +10,7 @@
     <a class="active"href="#Beaches">Beaches</a>
     <a href="/Users/davidalpert/Desktop/MV Project/resturants.html">Restaurants</a>
     <a href="/Users/davidalpert/Desktop/MV Project/Transport.html">Transportation</a>
-    <a href="/Users/davidalpert/Desktop/MV Project/Landmarks.html">Landmarks</a>
+    <a href="https://daa99.github.io/Landmarks.html">Landmarks</a>
     <a href="/Users/davidalpert/Desktop/MV Project/About.html">About</a>
   </div>
   <br>
