--- a/beaches.html
+++ b/beaches.html
@@ -6,7 +6,7 @@
   <H1> Martha's Vineyard </H1>
 
   <div class="topnav">
-    <a href="/Users/davidalpert/Desktop/MV Project/MVHomepage.html">Home</a>
+    <a href="https://daa99.github.io/MVHomepage">Home</a>
     <a class="active"href="#Beaches">Beaches</a>
     <a href="/Users/davidalpert/Desktop/MV Project/resturants.html">Restaurants</a>
     <a href="/Users/davidalpert/Desktop/MV Project/Transport.html">Transportation</a>
