--- a/Landmarks.html
+++ b/Landmarks.html
@@ -7,7 +7,7 @@
 
   <div class="topnav">
     <a href="https://daa99.github.io/MVHomepage">Home</a>
-    <a href="/Users/davidalpert/Desktop/MV Project/beaches.html">Beaches</a>
+    <a href="https://daa99.github.io/beaches.html">Beaches</a>
     <a href="/Users/davidalpert/Desktop/MV Project/resturants.html">Restaurants</a>
     <a href="/Users/davidalpert/Desktop/MV Project/Transport.html">Transportation</a>
     <a class="active" href="#Landmarks">Landmarks</a>
