--- a/Transport.html
+++ b/Transport.html
@@ -11,7 +11,7 @@
     <a href="/Users/davidalpert/Desktop/MV Project/resturants.html">Restaurants</a>
     <a class="active" href="#Transportation">Transportation</a>
     <a href="https://daa99.github.io/Landmarks.html">Landmarks</a>
-    <a href="/Users/davidalpert/Desktop/MV Project/About.html">About</a>
+    <a href="https://daa99.github.io/About.html">About</a>
   </div>
   <br>
   <center>
