--- a/About.html
+++ b/About.html
@@ -34,8 +34,7 @@ form {border-style: double;
 
   <div class="topnav">
     <a href="https://daa99.github.io/MVHomepage">Home</a>
-    <a href="https://daa99.github.io/beaches.html">Beaches</a>
-    <a href="/Users/davidalpert/Desktop/MV Project/resturants.html">Restaurants</a>
+    <a href="https://daa99.github.io/resturants.html">Restaurants</a>
     <a href="https://daa99.github.io/Transport.html">Transportation</a>
     <a href="https://daa99.github.io/Landmarks.html">Landmarks</a>
     <a class="active" href="#about">About</a>
