--- a/beaches.html
+++ b/beaches.html
@@ -8,7 +8,7 @@
   <div class="topnav">
     <a href="https://daa99.github.io/MVHomepage">Home</a>
     <a class="active"href="#Beaches">Beaches</a>
-    <a href="/Users/davidalpert/Desktop/MV Project/resturants.html">Restaurants</a>
+    <a href="https://daa99.github.io/resturants.html">Restaurants</a>
     <a href="https://daa99.github.io/Transport.html">Transportation</a>
     <a href="https://daa99.github.io/Landmarks.html">Landmarks</a>
     <a href="https://daa99.github.io/About.html">About</a>
