--- a/resturants.html
+++ b/resturants.html
@@ -6,7 +6,7 @@
   <H1> Martha's Vineyard </H1>
 
   <div class="topnav">
-    <a href="https://daa99.github.io/MVHomepagel">Home</a>
+    <a href="https://daa99.github.io/MVHomepage">Home</a>
     <a href="https://daa99.github.io/beaches.html">Beaches</a>
     <a class="active" href="/Users/davidalpert/Desktop/MV Project/resturants.html">Restaurants</a>
     <a href="https://daa99.github.io/Transport.html">Transportation</a>
