--- a/MVHomepage.html
+++ b/MVHomepage.html
@@ -27,7 +27,7 @@
 
 <div class="mySlides fade">
 
-  <img src="/Users/davidalpert/Desktop/MV Project/Maosup Beach.JPG" Width="500px" Height="500px">
+  <img src="https://daa99.github.io/https://github.com/DAA99/DAA99.github.io/blob/main/MV%20Project/Maosup%20Beach.JPG" Width="500px" Height="500px">
   <div class="text">Moshup Beach</div>
 </div>
 
