--- a/beaches.html
+++ b/beaches.html
@@ -19,7 +19,7 @@
 
   <div class="mySlides fade">
 
-    <img src="/Users/davidalpert/Desktop/MV Project/Menemsha Beach.jpg" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/MenemshaBeach.jpg" Width="500px" Height="500px">
     <div class="text">Menemsha Beach</div>
   </div>
 
