--- a/beaches.html
+++ b/beaches.html
@@ -25,7 +25,7 @@
 
   <div class="mySlides fade">
 
-    <img src="/Users/davidalpert/Desktop/MV Project/Maosup Beach.JPG" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/Maosup Beach.JPG" Width="500px" Height="500px">
     <div class="text">Moshup Beach</div>
   </div>
 
