--- a/Landmarks.html
+++ b/Landmarks.html
@@ -19,19 +19,19 @@
 
   <div class="mySlides fade">
 
-    <img src="/Users/davidalpert/Desktop/MV Project/GingerBredHouses.JPG" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/MV%20Project/GingerBredHouses.JPG" Width="500px" Height="500px">
     <div class="text">Gingerbread Houses</div>
   </div>
 
   <div class="mySlides fade">
 
-    <img src="/Users/davidalpert/Desktop/MV Project/Homepg5.jpg" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/MV%20Project/Homepg5.jpg" Width="500px" Height="500px">
     <div class="text">Edgartown Lighthouse</div>
   </div>
 
   <div class="mySlides fade">
 
-    <img src="/Users/davidalpert/Desktop/MV Project/flying_horses_horses.jpg" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/MV%20Project/flying_horses_horses.jpg" Width="500px" Height="500px">
     <div class="text">Flying Hourses Carousel</div>
   </div>
 
@@ -78,7 +78,7 @@
     Lighthouse of the Island. Edgartown Lighthouse is a must see on your trip to Martha's Vineyard.
 </p>
 <figure style="float:left; padding:0;">
-<img src="/Users/davidalpert/Desktop/MV Project/Gingerbread2.JPG" width="310" height="240" style="float:left">
+<img src="https://daa99.github.io/MV%20Project/Gingerbread2.JPG" width="310" height="240" style="float:left">
 <figcaption>Gingerbread House</figcaption>
 </figure>
 <p>
