--- a/MVHomepage.html
+++ b/MVHomepage.html
@@ -21,19 +21,19 @@
 
 <div class="mySlides fade">
 
-  <img src="https://daa99.github.io/Homepg5.jpg" Width="500px" Height="500px">
+  <img src="https://daa99.github.io/MV%20Project/Homepg5.jpg" Width="500px" Height="500px">
   <div class="text">Edgartown Light House</div>
 </div>
 
 <div class="mySlides fade">
 
-  <img src="https://daa99.github.io/https://github.com/DAA99/DAA99.github.io/blob/main/MV%20Project/Maosup%20Beach.JPG" Width="500px" Height="500px">
+  <img src="https://daa99.github.io/MV%20Project/Maosup%20Beach.JPG" Width="500px" Height="500px">
   <div class="text">Moshup Beach</div>
 </div>
 
 <div class="mySlides fade">
 
-  <img src="/Users/davidalpert/Desktop/MV Project/South Beach.JPG" Width="500px" Height="500px">
+  <img src="https://daa99.github.io/MV%20Project/South%20Beach.JPG" Width="500px" Height="500px">
   <div class="text">South Beach</div>
 </div>
 
