--- a/MVHomepage.html
+++ b/MVHomepage.html
@@ -81,7 +81,7 @@ function showSlides() {
 
 
 <figure style="float:left; padding:0;">
-<img src="https://daa99.github.io/MV%20Project/South%20Beach.JPGMV%20Towns.png" width="310" height="240" style="float:left">
+<img src="https://daa99.github.io/MV%20Project/South%20Beach.JPG%20Towns.png" width="310" height="240" style="float:left">
 <figcaption>Map of MV</figcaption>
 </figure>
 <p>
