--- a/Transport.html
+++ b/Transport.html
@@ -19,13 +19,13 @@
 
   <div class="mySlides fade">
 
-    <img src="/Users/davidalpert/Desktop/MV Project/Chapequitic Ferry.MOV" Width="600px" Height="450px">
+    <img src="https://daa99.github.io/MV%20Project/Chapequitic%20Ferry.MOV" Width="600px" Height="450px">
     <div class="text">Chappy Ferry</div>
   </div>
 
   <div class="mySlides fade">
 
-    <img src="/Users/davidalpert/Desktop/MV Project/Ferry.MOV" Width="610px" Height="450px">
+    <img src=https://daa99.github.io/MV%20Project/Ferry.MOV" Width="610px" Height="450px">
     <div class="text">Steamship Authority</div>
   </div>
   </div>
@@ -73,7 +73,7 @@
 </p>
 <figure style="float:left; padding:0;">
 <a target="_blank" rel="noopener noreferrer" href="https://www.steamshipauthority.com">
-<img src="/Users/davidalpert/Desktop/MV Project/IMG_0178.jpg"  width="310" height="240" style="float:left">
+<img src="https://daa99.github.io/MV%20Project/IMG_0178.jpg"  width="310" height="240" style="float:left">
 </a>
 <figcaption>Steamship Authority<br>(Click Image)</figcaption>
 </figure>
