--- a/Transport.html
+++ b/Transport.html
@@ -25,7 +25,7 @@
 
   <div class="mySlides fade">
 
-    <img src=https://daa99.github.io/MV%20Project/Ferry.MOV" Width="610px" Height="450px">
+    <img src="https://daa99.github.io/MV%20Project/Ferry.MOV" Width="610px" Height="450px">
     <div class="text">Steamship Authority</div>
   </div>
   </div>
