--- a/beaches.html
+++ b/beaches.html
@@ -19,19 +19,19 @@
 
   <div class="mySlides fade">
 
-    <img src="https://daa99.github.io/MV project/Menemsha Beach.jpg" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/MV%20Project/Menemsha%20Beach.jpg" Width="500px" Height="500px">
     <div class="text">Menemsha Beach</div>
   </div>
 
   <div class="mySlides fade">
 
-    <img src="https://daa99.github.io/Maosup Beach.JPG" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/MV%20Project/Maosup%20Beach.JPG" Width="500px" Height="500px">
     <div class="text">Moshup Beach</div>
   </div>
 
   <div class="mySlides fade">
 
-    <img src="https://daa99.github.io/SouthBeach.html" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/MV%20Project/SouthBeach.html" Width="500px" Height="500px">
     <div class="text">South Beach</div>
   </div>
 
@@ -76,7 +76,7 @@
      beach with little rocks. There is plenty of parking along the street. There can be very
      big waves there sometimes but there are lifeguards there.</p>
 <figure style="float:left; padding:0;">
-<img src="/Users/davidalpert/Desktop/MV Project/Homepgsunset.JPG" width="310" height="240" style="float:left">
+<img src="https://daa99.github.io/MV%20Project/Homepgsunset.JPG" width="310" height="240" style="float:left">
 <figcaption>Menemsha Beach</figcaption>
 </figure>
 <p>
