--- a/beaches.html
+++ b/beaches.html
@@ -31,7 +31,7 @@
 
   <div class="mySlides fade">
 
-    <img src="https://daa99.github.io/MV%20Project/SouthBeach.html" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/MV%20Project/South%20Beach.jpeg" Width="500px" Height="500px">
     <div class="text">South Beach</div>
   </div>
 
