--- a/resturants.html
+++ b/resturants.html
@@ -19,19 +19,19 @@
 
   <div class="mySlides fade">
 
-    <img src="/Users/davidalpert/Desktop/MV Project/Backdoordonuts.JPG" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/MV%20Project/Backdoordonuts.JPG" Width="500px" Height="500px">
     <div class="text">Back Door Donuts</div>
   </div>
 
   <div class="mySlides fade">
 
-    <img src="/Users/davidalpert/Desktop/MV Project/LuckHanksSign.JPG" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/MV%20Project//LuckHanksSign.JPG" Width="500px" Height="500px">
     <div class="text">Lucky Hanks</div>
   </div>
 
   <div class="mySlides fade">
 
-    <img src="/Users/davidalpert/Desktop/MV Project/IMG_0208.jpg" Width="500px" Height="500px">
+    <img src="https://daa99.github.io/MV%20Project/IMG_0208.jpg" Width="500px" Height="500px">
     <div class="text">Black Dog Tavern</div>
   </div>
 
@@ -77,7 +77,7 @@ Martha's Vineyard has lots of restaurants. The Island is known for its seafood.
      Vineyard Haven. It has great harbor views and you get to see the Ferries come in.</p>
 <figure style="float:left; padding:0;">
 <a target="_blank" rel="noopener noreferrer" href="https://www.theblackdog.com/pages/the-black-dog-tavern">
-<img src="/Users/davidalpert/Desktop/MV Project/Blackdogsign.jpeg" width="310" height="240" style="float:left">
+<img src="https://daa99.github.io/MV%20Project//Blackdogsign.jpeg" width="310" height="240" style="float:left">
 </a>
 <figcaption>Black Dog Tavern<br>(Click Image)</figcaption>
 </figure>
