--- a/resturants.html
+++ b/resturants.html
@@ -1,5 +1,15 @@
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J5CSJ3Q1VW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J5CSJ3Q1VW');
+</script>
+  
 <link rel="stylesheet" href="https://daa99.github.io/MVstyling.css">
 </head>
 <body>
